<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductoActivity">

    <EditText
        android:id="@+id/txtCodigoProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_codigo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtDescProdcuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_descripcion"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtPrecioProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_precio"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAgregarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_agregar" />

    <Button
        android:id="@+id/btnEditProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_editar" />

    <Button
        android:id="@+id/btnEliminarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_eliminar" />

</LinearLayout>