<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PedidoActivity">

    <TextView
        android:id="@+id/lblCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cliente" />

    <Spinner
        android:id="@+id/spinnerClientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lblProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_producto" />

    <Spinner
        android:id="@+id/spinnerProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_cantidad"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnAgregarProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_agregar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listDetalle"
        android:layout_width="match_parent"
        android:layout_height="374dp" />

    <Button
        android:id="@+id/btnGuardarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar" />

</LinearLayout>